Fixed extra css spacing inside the layout

--- a/style.css
+++ b/style.css
@@ -197,11 +197,10 @@ input::placeholder {
 /* Learn - Box */
 .learn-box {
   width: 23vw;
-  padding: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 10px;
+  justify-content: center;
   background-color: rgb(255, 253, 253);
   margin: 20px;
   text-align: center;
@@ -209,7 +208,11 @@ input::placeholder {
   border-radius: 18px;
 }
 .content {
-  margin-top: -20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  gap: 10px;
 }
 
 .pictures {
@@ -247,7 +250,8 @@ input::placeholder {
   text-align: center;
   justify-content: center;
   align-items: center;
-  height: 15%;
+  height: 8%;
+  margin-bottom: 5px;
 }
 .foot-box a {
   text-decoration: none;
@@ -423,7 +427,6 @@ p {
 .feed-box {
   margin-top: 25px;
   width: 48vw;
-  height: 100%;
   border-radius: 12px;
   background-color: rgb(255, 253, 253);
 }
@@ -497,7 +500,6 @@ p {
 .sort-by {
   display: flex;
   align-items: center;
-  margin: 10px 0;
 }
 .sort-by hr {
   flex: 1;
@@ -523,6 +525,7 @@ p {
   gap: 10px;
   margin: 30px;
   padding-top: 20px;
+
 }
 .post-img {
   width: 60px;
@@ -576,8 +579,6 @@ p {
 .like-logos {
   display: flex;
   flex-direction: row;
-  padding: 10px;
-
   gap: -1px;
   padding: 0;
   margin-right: 1px;
@@ -630,12 +631,6 @@ p {
 hr {
   margin-left: 20px;
   margin-right: 20px;
-}
-
-.mid-container::after {
-  content: "";
-  display: block;
-  height: 100px;
 }
 
 /* Profile-Drop Down Menu */
